--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -7,16 +7,19 @@
 </head>
 <body>
   <div class="container">
-    <div class="Chat">
-    </div>
-    <aside class="chat-section">
-      <div class="messages">
-        <p><strong>CLE-BERR:</strong> I LOVE YOU 🥰 </p>
-        <p><strong>EBROUDIC:</strong> DWADWADWA</p>
-        <p><strong>LELANGLO:</strong> Je suis trop moche</p>
+    <div class="chat-container">
+      <div class="Chat">
+        <h2>CHAT</h2>
       </div>
-      <input type="text" placeholder="Enter a message" />
-    </aside>
+      <aside class="chat-section">
+        <div class="messages">
+          <p><strong>CLE-BERR:</strong> I LOVE YOU 🥰 </p>
+          <p><strong>EBROUDIC:</strong> DWADWADWA</p>
+        </div>
+        <input type="text" placeholder="Enter a message" />
+      </aside>
+    </div>
+    
 
     <main class="main-section">
       
