--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,7 +66,7 @@
 					<button id="local game button" class="bg-green-500 text-white font-bold py-2 px-6 rounded-full hover:bg-green-600 transition duration-200 absolute">
 					  Play
 					</button>
-					<script>src="src/chat/game.js"</script>
+					<script src="src/game.js"> </script>
 				</div>
 				<button class="text-5xl">&gt;</button>
 			</div>
