--- a/frontend/src/login/login.html
+++ b/frontend/src/login/login.html
@@ -38,46 +38,62 @@
 		</div>
 	</div>
 
-	<div id="sign-up" class="hidden mx-auto text-center max-w-sm w-full rounded-2xl bg-white p-10">
+	<div id="sign-up" class=" mx-auto text-center max-w-sm w-full rounded-2xl bg-white p-10">
 		<h1 class="text-3xl mt-2 mb-4 font-bold text-black">Sign Up To ft_Transcendence</h1>
 	
 		<div class="bg-slate-400 rounded-3xl px-6 py-3 space-y-4">
 			<div class="text-left">
-				<p class="text-sm font-semibold text-black text-opacity-85 mb-1">Username or Email Address</p>
+				<p class="text-sm font-semibold text-black text-opacity-85 mb-1">Username
+					<span class="text-red-700">*</span>
+				</p>
 				<div class="bg-gray-500 rounded-3xl">
-					<input type="text" placeholder="Type Here..." class="bg-gray-500 w-full p-2 rounded-3xl text-white" />
+					<input id="username-input" type="text required" placeholder="Type Here..." class="bg-gray-500 w-full p-2 rounded-3xl text-white" />
+				</div>
+			</div>
+
+			<div class="text-left">
+				<p class="text-sm font-semibold text-black text-opacity-85 mb-1">Email
+					<span class="text-red-700">*</span>
+				</p>
+				<div class="bg-gray-500 rounded-3xl">
+					<input id="email-input" type="text required " placeholder="exemple@exemple.com" class="bg-gray-500 w-full p-2 rounded-3xl text-white" />
 				</div>
 			</div>
 	
 			<div class="text-left">
-				<p class="text-sm font-semibold text-black text-opacity-85 mb-1">Email</p>
-				<div class="bg-gray-500 rounded-3xl">
-					<input type="text" placeholder="exemple@exemple.com" class="bg-gray-500 w-full p-2 rounded-3xl text-white" />
-				</div>
-			</div>
-	
-			<div class="text-left">
-				<p class="text-sm font-semibold text-black text-opacity-85 mb-1">Password</p>
-				<div class="relative bg-gray-500 rounded-3xl">
-					<input id="passwordSignUp" type="password" placeholder="Type Here..." class="bg-gray-500 w-full p-2 pr-10 rounded-3xl text-white" />
+				<p class="text-sm font-semibold text-black text-opacity-85 mb-1">Password
+					<span class="text-red-700">*</span>
+				</p>	
+			<div class="flex items-center">
+				  <div class="relative bg-gray-500 rounded-3xl w-full">
+					<input id="passwordSignUp" type="password required" placeholder="Type Here..." class="bg-gray-500 w-full p-2 pr-10 rounded-3xl text-white" />
 					<button type="button" id="togglePasswordSignUp" class="absolute top-1/2 right-3 -translate-y-1/2 text-white">
-						<img id="eyeIconSignUp" src="../images/cacher.svg" class="size-10" alt="eye icon" />
-				  	</button>
+					  <img id="eyeIconSignUp" src="../images/cacher.svg" class="size-10" alt="eye icon" />
+					</button>
+				  </div>
+				  	<img id="badPasswordIcon" src="../images/croix.svg" class="hidden ml-2 w-6 h-6" />
+				  	<img id="goodPasswordIcon" src="../images/fleche.svg" class="hidden ml-2 w-6 h-6" />
 				</div>
 			</div>
 	
 			<div class="text-left">
-				<p class="text-sm font-semibold text-black text-opacity-85 mb-1">Confirm Password</p>
-				<div class="relative bg-gray-500 rounded-3xl">
-					<input id="confirmPassword" type="password" placeholder="Type Here..." class="bg-gray-500 w-full p-2 pr-10 rounded-3xl text-white" />
+				<p class="text-sm font-semibold text-black text-opacity-85 mb-1">Confirm Password
+					<span class="text-red-700">*</span> 
+				</p>
+				<div class="flex items-center">
+				  <div class="relative bg-gray-500 rounded-3xl w-full">
+					<input id="confirmPassword" type="password required" placeholder="Type Here..." class="bg-gray-500 w-full p-2 pr-10 rounded-3xl text-white" />
 					<button type="button" id="toggleConfirmPassword" class="absolute top-1/2 right-3 -translate-y-1/2 text-white">
-						<img id="eyeIconConfirm" src="../images/cacher.svg" class="size-10" alt="eye icon" />
-				  	</button>
+					  <img id="eyeIconConfirm" src="../images/cacher.svg" class="size-10" alt="eye icon" />
+					</button>
+				  </div>
+				  	<img id="badConfirmPasswordIcon" src="../images/croix.svg" class="hidden ml-2 w-6 h-6" />  
+				  	<img id="goodConfirmPasswordIcon" src="../images/fleche.svg" class="hidden ml-2 w-6 h-6" />
 				</div>
 			</div>
 	
 			<div class="text-center">
-				<button class="bg-purple-700 hover:bg-purple-800 transition duration-300 shadow-md hover:shadow-lg text-white px-6 py-2 font-semibold rounded-2xl">Sign Up</button>
+				<button id="signUp-btn" class="bg-purple-700 hover:bg-purple-800 transition duration-300 shadow-md hover:shadow-lg text-white px-6 py-2 font-semibold rounded-2xl">Sign Up</button>
 			</div>
 	
 			
