--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,7 +66,7 @@
 				<div class="w-96 h-80 bg-gray-200 rounded-lg relative flex flex-col items-center justify-center gap-4">
 				  <div id="game-mode" class="text-black px-4 py-20 rounded text-3xl font-bold">LOCAL</div>
 				  <button id="game-play-button" class="bg-green-500 text-white font-bold py-2 px-6 rounded-full hover:bg-green-600 transition duration-200">Play</button>
-				  <script src="src/game.js"></script>
+				  <script src="src/game/game.js"></script>
 				</div>
 				<button id="right-button-game" class="text-5xl">&gt;</button>
 			</div>
