--- a/frontend/src/game/pong.html
+++ b/frontend/src/game/pong.html
@@ -5,10 +5,20 @@
 		<meta charset="UTF-8" />
 		<title>Pong en TypeScript</title>
 		<link rel="stylesheet" href="style.css" />
+		<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+
 	</head>
 <!---------------------------------------------------------------------->
 	<body>
-		<canvas id="gameCanvas" width="800" height="600"></canvas>
+		<div style="display: flex; justify-content: center; align-items: flex-start;">
+			<canvas id="statPlayer1" width="250" height="600" style="margin-right: 50px; margin-top: 95px;"></canvas>
+			<div style="display: flex; flex-direction: column; align-items: center;">
+			  <canvas id="topCanvas" width="300" height="70" style="margin-bottom: 20px;"></canvas>
+			  <canvas id="gameCanvas" width="800" height="600"></canvas>
+			</div>
+		  
+			<canvas id="statPlayer2" width="250" height="600" style="margin-left: 50px; margin-top: 95px;"></canvas>
+		</div>
 		<script type="module" src="pong.js"></script>
 	</body>
 </html>
