--- a/frontend/src/game/pong.html
+++ b/frontend/src/game/pong.html
@@ -3,7 +3,7 @@
 <html lang="fr">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Pong en TypeScript</title>
+		<title>local</title>
 		<link rel="stylesheet" href="style.css" />
 		<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 
