--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
 	<!-- Zone d'entrée + bouton -->
 	<div class="flex items-center gap-2 w-full">
 	  <input id="chat-input" type="text" placeholder="Enter a message" class="p-2 border3 rounded-2xl flex-grow min-w-0" />
-	  <button id="chat-send" class="w-8 h-8 bg-gray-500 rounded-full flex items-center justify-center shrink-0">➤</button>
+	  <button id="chat-send" class="w-8 h-8 bg-blue-500 rounded-full flex items-center justify-center shrink-0">➤</button>
 	</div>
 	<script src="src/chat/chat.js"></script>
   </div>
