--- a/frontend/src/login/login.html
+++ b/frontend/src/login/login.html
@@ -9,7 +9,11 @@
 
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
 	
-	<form id="sign-in" action="/..." method="POST" class="space-y-4 max-w-md w-full bg-white p-6 rounded-2xl shadow">
+
+	<!--formulaire de connection-->
+
+
+	<form id="sign-in" action="" method="POST" class="space-y-4 max-w-md w-full bg-white p-6 rounded-2xl shadow">
 		<h2 class="text-2xl font-bold text-center text-purple-700 mb-4">Sign In to ft_transcendence</h2>
 		<div id="sign-in-username-div" class="">
 			<label for="Sign-in-username" class="block font-semibold mb-1">Username
@@ -41,7 +45,11 @@
 		</div>
 	</form>
 	
-	<form id="sign-up" action="/..." method="POST" class=" hidden space-y-4 max-w-md w-full bg-white p-6 rounded-2xl shadow">
+
+	<!--formulaire d'inscription-->
+
+
+	<form id="sign-up" action="" method="POST" class=" hidden space-y-4 max-w-md w-full bg-white p-6 rounded-2xl shadow">
 		<h2 class="text-2xl font-bold text-center text-purple-700 mb-4">Sign Up to ft_transcendence</h2>
 		<div>
 			<label for="sign-up-username" class="block font-semibold mb-1">username
