--- a/frontend/src/profile/profile.html
+++ b/frontend/src/profile/profile.html
@@ -11,59 +11,79 @@
   
       <!-- Onglets -->
       <div class="flex flex-col sm:flex-row justify-center gap-4 mb-6">
-        <button id="stats-btn" class="tab-button w-full sm:w-auto px-60 py-2 rounded-lg bg-gray-200 text-gray-800">STATISTIQUES</button>
+        <button id="stats-btn" class="tab-button w-full sm:w-auto px-60 py-2 rounded-lg bg-blue-500 text-white">STATISTIQUES</button>
         <button id="edit-btn" class="tab-button w-full sm:w-auto px-60 py-2 rounded-lg bg-gray-200 text-gray-800">Edit Profile</button>
       </div>
   
       <!-- Formulaire d'édition -->
-      <div id="edit-div" class="border rounded-xl p-6 bg-gray-300 h-[calc(100%-100px)] overflow-auto">
-        <form >
+      <form id="edit-profil-form" action="" method="POST" class="hidden border rounded-xl p-6 bg-gray-300 h-[calc(100%-100px)] overflow-auto">
         <div id="" class="flex flex-col md:flex-row gap-6 h-full">
   
           <!-- Partie gauche (image) -->
           <div class="flex flex-col items-center mt-10 md:w-1/3">
             <div class="size-80 bg-gray-600 rounded-full mb-4"></div>
-                <button class="bg-gray-200 px-8 py-6 rounded-2xl text-sm">EDIT Profile picture</button>
+                <button id="button" class="bg-gray-200 px-8 py-6 rounded-2xl text-sm">EDIT Profile picture</button>
           </div>
   
           <!-- Partie droite (formulaire) -->
           <div class="md:w-2/3 mt-20 space-y-5">
             <div id="edit-username-div" >
               <label class="block text-sm font-bold mb-1">EDIT USERNAME</label>
-              <input type="text" placeholder="pseudo actuel" class="w-3/6  rounded-lg px-3 py-6 text-gray-700"/>
+              <input id="edit-username-input" type="text" placeholder="pseudo actuel" class="w-3/6  rounded-lg px-3 py-6 text-gray-700"/>
             </div>
             <div id="edit-email-div" >
               <label class="block text-sm font-bold mb-1">EDIT EMAIL</label>
-              <input  type="password" placeholder="email actuel" class="w-3/6  rounded-lg px-3 py-6 text-gray-700"/>
+              <input id="edit-email-input" type="email" placeholder="email actuel" class="w-3/6  rounded-lg px-3 py-6 text-gray-700"/>
             </div>
-            <div id="edit-current-password-div" class="hidden">
-                <label class="block text-sm font-bold mb-1">current password</label>
-                <input  type="password" placeholder="current password" class="w-3/6  rounded-lg px-3 py-6 text-gray-700"/>
-              </div>
-              <div id="edit-new-password-div" class="hidden" >
-                <label class="block text-sm font-bold mb-1">new password</label>
-                <input  type="password" placeholder="new password" class="w-3/6  rounded-lg px-3 py-6 text-gray-700"/>
-              </div>
-              <div id="edit-confirm-new-password-div" class="hidden">
-                <label class="block text-sm font-bold mb-1">confirm password</label>
-                <input  type="password" placeholder="confirm password" class="w-3/6  rounded-lg px-3 py-6 text-gray-700"/>
-              </div>
+            
             <div class="text-center">
               <button id="edit-password-btn" type="button" class="bg-gray-200 mt-8 rounded-lg px-4 py-4">Change Password</button>
             </div> 
   
             <!-- Boutons -->
             <div class="flex justify-self-start space-x-10 gap-96 pt-7">
-              <button id="unsave-btn" class="bg-red-300 text-white px-4 py-2 rounded-lg">UNSAVE</button>
-              <button id="save-btn" class="bg-green-300 text-white px-4 py-2 rounded-lg">SAVE</button>
+              <button type="button" id="unsave-btn" class="bg-red-300 text-white px-4 py-2 rounded-lg">UNSAVE</button>
+              <button type="submit" id="save-btn" class="bg-green-300 text-white px-4 py-2 rounded-lg">SAVE</button>
             </div>
           </div>
   
         </div>
     </form>
-</div>
 
-        <div id="stats-div" class="hidden border rounded-xl p-6 bg-red-300 h-[calc(100%-100px)] overflow-auto"></div>
+<form id="edit-password-form" action="" method="POST" class="hidden border rounded-xl p-6 bg-gray-300 h-[calc(100%-100px)] overflow-auto">
+  <div id="" class="flex flex-col md:flex-row gap-6 h-full">
+
+    <!-- Partie gauche (image) -->
+    <div class="flex flex-col items-center mt-10 md:w-1/3">
+      <div class="size-80 bg-gray-600 rounded-full mb-4"></div>
+          <button id="button" class="bg-gray-200 px-8 py-6 rounded-2xl text-sm">EDIT Profile picture</button>
+    </div>
+
+    <!-- Partie droite (formulaire) -->
+    <div class="md:w-2/3 mt-20 space-y-5">
+      <div id="edit-current-password-div" class="">
+        <label class="block text-sm font-bold mb-1">current password</label>
+        <input id="edit-currentpassword-input" type="password" placeholder="current password" class="w-3/6  rounded-lg px-3 py-6 text-gray-700"/>
+      </div>
+      <div id="edit-new-password-div" class="" >
+        <label class="block text-sm font-bold mb-1">new password</label>
+        <input id="edit-newpassword-input"  type="password" placeholder="new password" class="w-3/6  rounded-lg px-3 py-6 text-gray-700"/>
+      </div>
+      <div id="edit-confirm-new-password-div" class="">
+        <label class="block text-sm font-bold mb-1">confirm password</label>
+        <input id="edit-confirmpassword-input"  type="password" placeholder="confirm password" class="w-3/6  rounded-lg px-3 py-6 text-gray-700"/>
+      </div>
+      
+      <!-- Boutons -->
+      <div class="flex justify-self-start space-x-10 gap-96 pt-7">
+        <button type="button" id="unsave-btn-edit-password" class="bg-red-300 text-white px-4 py-2 rounded-lg">UNSAVE</button>
+        <button type="submit" id="save-btn-edit-password" class="bg-green-300 text-white px-4 py-2 rounded-lg">SAVE</button>
+      </div>
+    </div>
+
+  </div>
+</form>
+      <form id="stats-form" class="border rounded-xl p-6 bg-red-500 h-[calc(100%-100px)] overflow-auto"></form>
   
     </div>
     <script type="module" src="profile.js"></script>
