+| background in login page, amelioration estethique page de profil et redirection vers page de profil sur index.html

--- a/frontend/src/login/login.html
+++ b/frontend/src/login/login.html
@@ -7,13 +7,12 @@
   	<link rel="stylesheet" href="../css/style.css">
 </head>
 
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+<body class="bg-cover bg-center bg-no-repeat min-h-screen flex items-center justify-center" style="background-image: url('../images/backgroundlogin.png')">
 	
 
 	<!--formulaire de connection-->
 
-
-	<form id="sign-in" action="" method="POST" class="space-y-4 max-w-md w-full bg-white p-6 rounded-2xl shadow">
+	<form id="sign-in" action="" method="POST" class="space-y-4 max-w-md w-full bg-white/30 backdrop-blur-lg p-6 rounded-2xl shadow border border-white/30">
 		<h2 class="text-2xl font-bold text-center text-purple-700 mb-4">Sign In to ft_transcendence</h2>
 		<div id="sign-in-username-div" class="">
 			<label for="Sign-in-username" class="block font-semibold mb-1">Username
