--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,24 +20,25 @@
 			<button id="chat-send" class="w-8 h-8 bg-gray-500 rounded-full flex items-center justify-center shrink-0">➤</button>
 		</div>
 		<script src="src/chat/chat.js"></script>
-  	</div>
-
+	</div>
+	
 	<div class="flex-1 flex flex-col">
 		<!-- TOP BAR -->
 		<div class="flex items-center justify-between border-b p-5">
 			<input type="search" placeholder="search" class="border-2 border-spacing-4 p-3 rounded-xl w-5/6" />
 			<div id="topbar-buttons" class="flex items-center gap-6">
-			<!-- Bouton Notification avec tooltip -->
+				<!-- Bouton Notification avec tooltip -->
 				<div class="relative group">
-			  		<button id="notification" class="w-10 h-10 bg-transparent flex items-center justify-center rounded-full"><svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-700" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+					<button id="notification" class="w-10 h-10 bg-transparent flex items-center justify-center rounded-full"><svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-700" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" /></svg>
-			  		</button>
-			  		<div class="absolute bottom-full mb-1 translate-y-2 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap">Notifications</div>
+					</button>
+					<div class="absolute bottom-full mb-1 translate-y-2 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap">Notifications</div>
 				</div>
-			<!-- Bouton Profile avec tooltip -->
+				<!-- Bouton Profile avec tooltip -->
 				<div class="relative group">
-			  		<button id="profile" class="w-14 h-14 bg-gray-200 rounded-full"></button>
-			  		<div class="absolute bottom-full mb-1 translate-y-2 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap">Profil</div>
+					<button id="profileBtn" type="button" class="w-14 h-14 bg-gray-200 rounded-full"></button>
+					<div class="absolute bottom-full mb-1 translate-y-2 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap">Profil</div>
+					<script src="src/profile/redirectionbtn.js"></script>
 				</div>
 		  	</div>
 		</div>
@@ -59,6 +60,5 @@
 			<div class="w-full max-w-4xl h-48 bg-gray-200 rounded-xl"></div>
 		</div>
 	</div>
-		
 </body>
 </html>
