--- a/frontend/src/game/AI/AI.html
+++ b/frontend/src/game/AI/AI.html
@@ -18,6 +18,6 @@
 			</div>
 			<canvas id="statPlayer2" width="250" height="600" style="margin-left: 50px; margin-top: 95px;"></canvas>
 		</div>
-		<script type="module" src="pong.js"></script>
+		<script type="module" src="pong-ai.js"></script>
 	</body>
 </html>
