--- a/frontend/src/profile/profile.html
+++ b/frontend/src/profile/profile.html
@@ -6,8 +6,9 @@
  	<title>Profil</title>
 		<link rel="stylesheet" href="../css/style.css">
 </head>
-<body class="bg-gray-300 min-h-screen m-0 p-0">
-		<div class="w-screen h-screen bg-black p-3">
+<body class="bg-cover bg-center bg-no-repeat min-h-screen flex items-center justify-center" style="background-image: url('../images/statscyberpunk.png'); background-size: 1920px 1080px;">
+
+		<div class="w-screen h-screen p-4">
 	
 			<!-- Onglets -->
 			<div class="flex justify-center gap-4 mt-3 mb-6">
