--- a/frontend/src/login/login.html
+++ b/frontend/src/login/login.html
@@ -9,8 +9,10 @@
 
 <body class="bg-center bg-no-repeat min-h-screen flex items-center justify-center" style="background-image: url('../images/logincyberpunk.png'); background-size: 1920px 1080px;">
 	
+	
+
 	<!--formulaire de connection-->
-	<form id="sign-in" action="" method="POST" class="space-y-4 max-w-md w-full bg-white/30 backdrop-blur-lg p-6 rounded-2xl shadow border border-white/30">
+	<form id="sign-in" action="" method="POST" class="space-y-4 max-w-md w-full border-2 border-[#00FFFF] drop-shadow-[0_0_10px_#00FFFF] bg-white/5 backdrop-blur p-6 rounded-2xl">
 		<h2 class="text-center text-2xl text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF] mb-4">Sign In to ft_transcendence</h2>
 		
 		<div id="sign-in-username-div">
@@ -45,7 +47,7 @@
 	
 
 	<!--formulaire d'inscription-->
-	<form id="sign-up" action="" method="POST" class="hidden space-y-4 max-w-md w-full bg-white/30 backdrop-blur-lg p-6 rounded-2xl shadow border border-white/30">
+	<form id="sign-up" action="" method="POST" class="hidden space-y-4 max-w-md w-full border-2 border-[#00FFFF] drop-shadow-[0_0_10px_#00FFFF] bg-white/5 backdrop-blur p-6 rounded-2xl">
 		<h2 class="text-2xl font-bold text-center text-[#00FFFF] drop-shadow-[0_0_10px_#00FFFF] mb-4">Sign Up to ft_transcendence</h2>
 		
 		<div>
