--- a/frontend/src/game/pong.html
+++ b/frontend/src/game/pong.html
@@ -15,7 +15,7 @@
 				<canvas id="statPlayer1" width="250" height="600" style="margin-top: 10px; border: 2px solid black; border-radius: 10px;"></canvas>
 			</div>
 			<div style="margin-top: 30px; display: flex; flex-direction: column; align-items: center;">
-			  <canvas id="topCanvas" width="300" height="70" style="margin-bottom: 35px; border: 2px solid black; border-radius: 1%;"></canvas>
+			  <canvas id="topCanvas" width="300" height="70" style="margin-bottom: 35px; border: 2px solid black; border-radius: 10px;"></canvas>
 			  <canvas id="gameCanvas" width="800" height="600" style="border: 2px solid black; border-radius: 10px;"></canvas>
 			</div>
 			<div style="margin-left: 50px;">
