+| style cyberpunk page d'accueil

--- a/frontend/src/profile/profile.html
+++ b/frontend/src/profile/profile.html
@@ -16,7 +16,7 @@
 		</div>
 			
 		<!-- Formulaire d'édition -->
-		<form id="edit-profil-form" action="" method="POST" class="hidden border-4 border-blue-300   bg-white/5 backdrop-blur-lg p-6 rounded-3xl drop-shadow-[0_0_10px_#00FFFF]  h-[calc(100%-100px)] overflow-auto">
+		<form id="edit-profil-form" action="" method="POST" class="hidden p-6 rounded-3xl border-4 border-blue-300 bg-white/5 backdrop-blur-lg  drop-shadow-[0_0_10px_#00FFFF]  h-[calc(100%-100px)] overflow-auto">
 			<div id="" class="flex flex-col md:flex-row gap-6 h-full">
 					<!-- Partie gauche (image) -->
 				
@@ -39,7 +39,7 @@
 					
 					<div class="flex items-center md:w-2/3">
 						<button id="edit-password-btn" type="button" class="px-6 py-3 bg-gray-500 text-white rounded-xl hover:bg-gray-700 transition">Change Password</button>
-					</div> 
+					</div>
 	
 					<!-- Boutons -->
 					<div class="flex justify-start gap-6 pt-8">
