--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="src/css/style.css">
 </head>
 
-<body id="body" class="bg-black bg-cover bg-center bg-no-repeat h-screen flex" style="background-image: url('/frontend/src/images/localgame.png'); background-size: 1920px 1080px;">
+<body id="body" class="bg-black bg-cover bg-center bg-no-repeat h-screen flex" style="background-image: url('/src/images/localgame.png'); background-size: 1920px 1080px;">
 	<!-- CHAT BOX -->
 	<div class="w-1/4 min-w-[200px] rounded-2xl m-5 p-4 flex flex-col border-4 border-blue-300 bg-white/5 backdrop-blur-lg  drop-shadow-[0_0_10px_#00FFFF]">
 		<div class="text-center text-xl font-bold mb-4 text-white">CHAT</div>
