--- a/frontend/src/game/pong.html
+++ b/frontend/src/game/pong.html
@@ -1,28 +1,39 @@
 <!DOCTYPE html>
-
 <html lang="fr">
-	<head>
-		<meta charset="UTF-8" />
-		<title>local</title>
-		<link rel="stylesheet"/>
-		<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
-	</head>
-<!---------------------------------------------------------------------->
-	<body style="margin: 0; background-color: white; display: flex; justify-content: center; align-items: center; height: 100vh;">
-		<div style="display: flex; justify-content: center; align-items: flex-start;">
-			<div style="margin-right: 50px;">
-				<h1 style="text-align: center; font-family: 'Caveat'; font-size: 50px;">Player 1</h1>
-				<canvas id="statPlayer1" width="250" height="600" style="margin-top: 10px; border: 2px solid black; border-radius: 10px;"></canvas>
-			</div>
-			<div style="margin-top: 30px; display: flex; flex-direction: column; align-items: center;">
-			  <canvas id="topCanvas" width="300" height="70" style="margin-bottom: 35px; border: 2px solid black; border-radius: 10px;"></canvas>
-			  <canvas id="gameCanvas" width="800" height="600" style="border: 2px solid black; border-radius: 10px;"></canvas>
-			</div>
-			<div style="margin-left: 50px;">
-				<h1 style="text-align: center; font-family: 'Caveat'; font-size: 50px ;">Player 2</h1>
-				<canvas id="statPlayer2" width="250" height="600" style="margin-top: 10px; border: 2px solid black; border-radius: 10px;"></canvas>
-			</div>
+<head>
+	<meta charset="UTF-8" />
+	<title>local</title>
+	<link rel="stylesheet" href="../css/style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+
+	<style>
+		h1 {font-family: 'Caveat', cursive;}
+	</style>
+</head>
+
+<body class="m-0 justify-center backdrop-blur items-center h-screenbg-cover bg-center bg-no-repeat h-screen flex" style="background-image: url('../images/pong.png'); background-size: 1920px 1080px;">
+
+	<div class="flex justify-center items-center">
+		<!-- Joueur 1 -->
+		<div class="mr-12 flex flex-col items-center">
+			<h1 class="text-center text-[50px] text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF]">Player 1</h1>
+			<canvas id="statPlayer1" width="250" height="600" class="mt-2 border-2 border-blue-300 shadow-[0_0_10px_#00FFFF] rounded-[10px]"></canvas>
 		</div>
-		<script type="module" src="pong.js"></script>
-	</body>
+
+		<!-- Zone centrale -->
+		 
+		<div class="flex flex-col items-center">
+			<canvas id="topCanvas" width="300" height="70" class="mb-9 border border-blue-300 shadow-[0_0_10px_#00FFFF] rounded-[10px]"></canvas></canvas>			
+	  		<canvas id="gameCanvas" width="800" height="600" class="border-2 border-gradient-to-r from-blue-500 to-pink-500 shadow-[0_0_10px_#00FFFF] rounded-[5px]"></canvas>
+		</div>
+
+		<!-- Joueur 2 -->
+		<div class="ml-12 flex flex-col items-center">
+			<h1 class="text-center text-[50px] text-[#FF007A] font-bold drop-shadow-[0_0_10px_#FF007A]">Player 2</h1>
+			<canvas id="statPlayer2" width="250" height="600" class="mt-2 border-2 border-[#FF007A] shadow-[0_0_10px_#FF007A] rounded-[10px]"></canvas>
+		</div>
+	</div>
+
+	<script type="module" src="pong.js"></script>
+</body>
 </html>
