--- a/frontend/src/game/AI/AI.html
+++ b/frontend/src/game/AI/AI.html
@@ -11,7 +11,7 @@
 	</style>
 </head>
 
-<body class="m-0 justify-center backdrop-blur items-center h-screenbg-cover bg-center bg-no-repeat h-screen flex" style="background-image: url('../images/pong.png'); background-size: 1920px 1080px;">
+<body class="m-0 justify-center backdrop-blur items-center h-screenbg-cover bg-center bg-no-repeat h-screen flex" style="background-image: url('../../images/pong.png'); background-size: 1920px 1080px;">
 
 	<div class="flex justify-center items-center">
 		<!-- Joueur 1 -->
@@ -24,7 +24,7 @@
 		 
 		<div class="flex flex-col items-center">
 			<canvas id="topCanvas" width="300" height="70" class="mb-9 border border-blue-300 shadow-[0_0_10px_#00FFFF] rounded-[10px]"></canvas></canvas>			
-	  		<canvas id="gameCanvas" width="800" height="600" class="border-2 border-gradient-to-r from-blue-500 to-pink-500 shadow-[0_0_10px_#00FFFF] rounded-[5px]"></canvas>
+	  		<canvas id="gameCanvas" width="800" height="600" class="border-2 border-blue-300 from-blue-500 to-pink-500 shadow-[0_0_10px_#00FFFF] rounded-[5px]"></canvas>
 		</div>
 
 		<!-- Joueur 2 -->
