--- a/frontend/src/login/login.html
+++ b/frontend/src/login/login.html
@@ -10,19 +10,19 @@
 <body class="bg-center bg-no-repeat min-h-screen flex items-center justify-center" style="background-image: url('../images/logincyberpunk.png'); background-size: 1920px 1080px;">
 	
 	<!--formulaire de connection-->
-	<form id="sign-in" action="" method="POST" class="space-y-4 max-w-md w-full border-2 border-[#00FFFF] drop-shadow-[0_0_10px_#00FFFF] bg-white/5 backdrop-blur p-6 rounded-2xl">
-		<h2 class="text-center text-2xl text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF] mb-4">Sign In to ft_transcendence</h2>
+	<form id="sign-in" action="" method="POST" class="space-y-4 max-w-md w-full border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF] bg-white/5 backdrop-blur p-6 rounded-2xl">
+		<h2 class="text-center text-2xl text-[#00FFFF] font-bold shadow-[0_0_10px_#00FFFF] mb-4">Sign In to ft_transcendence</h2>
 		
 		<div id="sign-in-username-div">
 			<label for="Sign-in-username" class="block text-white font-semibold mb-1">Username
-				<span id="sign-in-with-email" class="underline cursor-pointer text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF]">or Email</span>
+				<span id="sign-in-with-email" class="underline cursor-pointer text-[#00FFFF] font-bold shadow-[0_0_10px_#00FFFF]">or Email</span>
 			</label>
 			<input id="Sign-in-username" name="username" type="text" class="w-full p-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[#00FFFF]"/>
 		</div>
 		
 		<div id="sign-in-email-div" class="hidden">
 			<label for="Sign-in-email" class="block font-semibold mb-1 text-white">Email
-				<span id="sign-in-with-Username" class="underline cursor-pointer text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF]">or Username</span>
+				<span id="sign-in-with-Username" class="underline cursor-pointer text-[#00FFFF] font-bold shadow-[0_0_10px_#00FFFF]">or Username</span>
 			</label>
 			<input id="Sign-In-email" name="email" type="email" class="w-full p-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[#00FFFF]"/>
 		</div>
@@ -37,16 +37,16 @@
 			</div>
 		</div>
 
-		<button type="submit" class="w-full bg-[#00FFFF] text-black font-bold px-4 py-2 rounded-lg hover:brightness-125 transition drop-shadow-[0_0_10px_#00FFFF]">Sign In</button>
+		<button type="submit" class="w-full bg-[#00FFFF] text-black font-bold px-4 py-2 rounded-lg hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Sign In</button>
 		<div class="flex justify-end mt-4">
-			<span id="to-sign-up" class="underline cursor-pointer text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF]">Sign Up</span>
+			<span id="to-sign-up" class="underline cursor-pointer text-[#00FFFF] font-bold shadow-[0_0_10px_#00FFFF]">Sign Up</span>
 		</div>
 	</form>
 	
 
 	<!--formulaire d'inscription-->
-	<form id="sign-up" action="" method="POST" class="hidden space-y-4 max-w-md w-full border-2 border-[#00FFFF] drop-shadow-[0_0_10px_#00FFFF] bg-white/5 backdrop-blur p-6 rounded-2xl">
-		<h2 class="text-2xl font-bold text-center text-[#00FFFF] drop-shadow-[0_0_10px_#00FFFF] mb-4">Sign Up to ft_transcendence</h2>
+	<form id="sign-up" action="" method="POST" class="hidden space-y-4 max-w-md w-full border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF] bg-white/5 backdrop-blur p-6 rounded-2xl">
+		<h2 class="text-2xl font-bold text-center text-[#00FFFF] shadow-[0_0_10px_#00FFFF] mb-4">Sign Up to ft_transcendence</h2>
 		
 		<div>
 			<label for="sign-up-username" class="block font-semibold mb-1 text-white">Username
@@ -94,9 +94,9 @@
 			</div>
 		</div>
 	  
-		<button type="submit" class="w-full bg-[#00FFFF] text-black font-bold px-4 py-2 rounded-lg hover:brightness-125 transition drop-shadow-[0_0_10px_#00FFFF]">Sign Up</button>
+		<button type="submit" class="w-full bg-[#00FFFF] text-black font-bold px-4 py-2 rounded-lg hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Sign Up</button>
 		<div class="flex justify-end">
-			<span id="to-sign-in" class="underline cursor-pointer text-[#00FFFF] text-sm drop-shadow-[0_0_10px_#00FFFF]">Already have an account ?</span>
+			<span id="to-sign-in" class="underline cursor-pointer text-[#00FFFF] text-sm shadow-[0_0_10px_#00FFFF]">Already have an account ?</span>
 		</div>
 	</form>
 
