--- a/frontend/src/game/pong.html
+++ b/frontend/src/game/pong.html
@@ -18,7 +18,7 @@
 	<div class="flex justify-center items-center">
 		<!-- Joueur 1 -->
 		<div class="mr-12 flex flex-col items-center">
-			<h1 class="text-center text-[50px] text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF]">Player 1</h1>
+			<h1 class="text-center text-[50px] text-[#00FFFF] font-bold shadow-[0_0_10px_#00FFFF]">Player 1</h1>
 			<canvas id="statPlayer1" width="250" height="600" class="mt-2 border-4 bg-black border-blue-300 shadow-[0_0_10px_#00FFFF] rounded-[10px]"></canvas>
 		</div>
 
@@ -36,7 +36,7 @@
 
 		<!-- Joueur 2 -->
 		<div class="ml-12 flex flex-col items-center">
-			<h1 class="text-center text-[50px] text-[#FF007A] font-bold drop-shadow-[0_0_10px_#FF007A]">Player 2</h1>
+			<h1 class="text-center text-[50px] text-[#FF007A] font-bold shadow-[0_0_10px_#FF007A]">Player 2</h1>
 			<canvas id="statPlayer2" width="250" height="600" class="mt-2 border-4 bg-black border-[#FF007A] shadow-[0_0_10px_#FF007A] rounded-[10px]"></canvas>
 		</div>
 	</div>
