--- a/frontend/src/profile/profile.html
+++ b/frontend/src/profile/profile.html
@@ -11,12 +11,12 @@
 	<div class="w-screen h-screen p-4">
 		<!-- Onglets -->
 		<div class="flex justify-center gap-4 mt-3 mb-6">
-			<button id="stats-btn" class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF] text-black hover:brightness-125 transition drop-shadow-[0_0_10px_#00FFFF]">Statistiques</button>
+			<button id="stats-btn" class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF] text-black hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Statistiques</button>
 			<button id="edit-btn" class="tab-button px-10 py-3 rounded-xl font-semibold bg-gray-200 text-gray-700 hover:bg-gray-300 transition">Modifier le profil</button>
 		</div>
 			
 		<!-- Formulaire d'édition -->
-		<form id="edit-profil-form" action="" method="POST" class="hidden p-6 rounded-3xl border-4 border-blue-300 bg-white/5 backdrop-blur-lg  drop-shadow-[0_0_10px_#00FFFF]  h-[calc(100%-100px)] overflow-auto">
+		<form id="edit-profil-form" action="" method="POST" class="hidden p-6 rounded-3xl border-4 border-blue-300 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]  h-[calc(100%-100px)] overflow-auto">
 			<div id="" class="flex flex-col md:flex-row gap-6 h-full">
 					<!-- Partie gauche (image) -->
 				
@@ -52,7 +52,7 @@
 		</form>
 
 		<!-- change passowrd form -->
-		<form id="edit-password-form" action="" method="POST" class="hidden border-4 border-blue-300  bg-white/5 backdrop-blur-lg p-6 rounded-3xl drop-shadow-[0_0_10px_#00FFFF]  h-[calc(100%-100px)] overflow-auto">
+		<form id="edit-password-form" action="" method="POST" class="hidden border-4 border-blue-300  bg-white/5 backdrop-blur-lg p-6 rounded-3xl shadow-[0_0_10px_#00FFFF]  h-[calc(100%-100px)] overflow-auto">
 			<div id="" class="flex flex-col md:flex-row gap-6 h-full">
 
 				<!-- Partie gauche (image) -->
@@ -110,26 +110,26 @@
 			</div>
 		</form>
 
-		<div id="stats-div" class="border-4 border-blue-300 rounded-3xl p-4 h-[calc(100vh-125px)] bg-white/5 backdrop-blur-sm drop-shadow-[0_0_10px_#00FFFF] overflow-hidden flex flex-col relative">
+		<div id="stats-div" class="border-4 border-blue-300 rounded-3xl p-4 h-[calc(100vh-125px)] bg-white/5 backdrop-blur-sm shadow-[0_0_10px_#00FFFF] overflow-hidden flex flex-col relative">
   
 			<div class="flex justify-center gap-4 mb-4 relative z-10">
     			<button id="History-btn" type="button" class="tab-button px-10 py-2 rounded-xl font-semibold bg-gray-200 text-gray-700 hover:bg-gray-300 transition ">History</button>
-    			<button id="Global-btn" type="button" class="tab-button px-10 py-2 rounded-xl font-semibold bg-[#00FFFF] text-black hover:brightness-125 transition drop-shadow-[0_0_10px_#00FFFF]">Global</button>
+    			<button id="Global-btn" type="button" class="tab-button px-10 py-2 rounded-xl font-semibold bg-[#00FFFF] text-black hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Global</button>
     			<button id="Tournament-btn" type="button" class="tab-button px-10 py-2 rounded-xl font-semibold bg-gray-200 text-gray-700 hover:bg-gray-300 transition">Tournament</button>
   			</div>
 
 			<div class="flex-1 relative flex items-center justify-center">
 
-				<div id="History-Div" class="hidden rounded-2xl w-11/12 h-full bg-white/5 backdrop-blur p-6" style="filter: drop-shadow(0 0 20px rgba(0,0,0,1)) drop-shadow(0 0 40px rgba(0,0,0,0.9)) drop-shadow(0 0 60px rgba(0,0,0,0.8));">
+				<div id="History-Div" class="hidden rounded-2xl w-11/12 h-full bg-white/5 backdrop-blur p-6" style="filter: shadow(0 0 20px rgba(0,0,0,1)) shadow(0 0 40px rgba(0,0,0,0.9)) shadow(0 0 60px rgba(0,0,0,0.8));">
 					<div class=""></div>
 
 				</div>
 				
-				<div id="Global-Div" class="rounded-2xl w-11/12 h-full bg-white/5 backdrop-blur p-6" style="filter: drop-shadow(0 0 20px rgba(0,0,0,1)) drop-shadow(0 0 40px rgba(0,0,0,0.9)) drop-shadow(0 0 60px rgba(0,0,0,0.8));">
+				<div id="Global-Div" class="rounded-2xl w-11/12 h-full bg-white/5 backdrop-blur p-6" style="filter: shadow(0 0 20px rgba(0,0,0,1)) shadow(0 0 40px rgba(0,0,0,0.9)) shadow(0 0 60px rgba(0,0,0,0.8));">
 
 				</div>
 			
-				<div id="Tournament-Div" class="hidden rounded-2xl w-11/12 h-full bg-white/5 backdrop-blur p-6" style="filter: drop-shadow(0 0 20px rgba(0,0,0,1)) drop-shadow(0 0 40px rgba(0,0,0,0.9)) drop-shadow(0 0 60px rgba(0,0,0,0.8));"">
+				<div id="Tournament-Div" class="hidden rounded-2xl w-11/12 h-full bg-white/5 backdrop-blur p-6" style="filter: shadow(0 0 20px rgba(0,0,0,1)) shadow(0 0 40px rgba(0,0,0,0.9)) shadow(0 0 60px rgba(0,0,0,0.8));"">
 
 				</div>
 			</div>
