--- a/frontend/src/profile/profile.html
+++ b/frontend/src/profile/profile.html
@@ -120,17 +120,11 @@
 
 			<div class="flex-1 relative flex items-center justify-center">
 
-				<div id="History-Div" class="w-11/12 h-[70vh] overflow-y-auto bg-white/5 backdrop-blur p-6 rounded-2xl shadow-[0_0_20px_rgba(0,0,0,1),0_0_40px_rgba(0,0,0,0.9),0_0_60px_rgba(0,0,0,0.8)] space-y-6 mx-auto">
-					<div class="bg-black text-white p-20 rounded-xl">game 1</div>
-					<div class="bg-black text-white p-20 rounded-xl">game 2</div>
-					<div class="bg-black text-white p-20 rounded-xl">game 3</div>
-					<div class="bg-black text-white p-20 rounded-xl">game 4</div>
-					<div class="bg-black text-white p-20 rounded-xl">game 4</div>
-					<div class="bg-black text-white p-20 rounded-xl">game 4</div>
-					<div class="bg-black text-white p-20 rounded-xl">game 4</div>
-					<div class="bg-black text-white p-20 rounded-xl">game 4</div>
-					<div class="bg-black text-white p-20 rounded-xl">game 4</div>
-					<div class="bg-black text-white p-20 rounded-xl">game 4</div>
+				<div id="History-Div" class="w-11/12 h-[70vh] overflow-y-auto bg-white/5 backdrop-blur p-6 rounded-2xl shadow-[0_0_20px_rgba(0,0,0,1),0_0_40px_rgba(0,0,0,0.9),0_0_60px_rgba(0,0,0,0.8)] space-y-4 mx-auto">
+					<div class="bg-black p-24 rounded-xl"></div>
+					<div class="bg-black p-24 rounded-xl"></div>
+					<div class="bg-black p-24 rounded-xl"></div>
+
 				</div>
 
 				<div id="Global-Div" class="hidden rounded-2xl w-11/12 h-full bg-white/5 backdrop-blur p-6 shadow-[0_0_20px_rgba(0,0,0,1),0_0_40px_rgba(0,0,0,0.9),0_0_60px_rgba(0,0,0,0.8)]" >
