marche plus le serv pour s'inscrire ne marche pas !!

--- a/frontend/src/profile/profile.html
+++ b/frontend/src/profile/profile.html
@@ -159,6 +159,7 @@
 	
 	<script type="module" src="profile.js"></script>
 	<script type="module" src="stats.js"></script>
+	<script type="module" src="history.js"></script>
 	
 </body>
 </html>
