history database qui marche a2f pour l'autre con

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,7 +52,7 @@
 					<div id="game-mode" class="text-white px-4 py-1.5 rounded text-3xl font-bold"></div>
 					<div id="description-game-mode" class="text-white px-4 py-10 rounded text-md font-bold"></div>
 					<button id="game-play-button" class="bg-green-500 text-white font-bold py-2 px-6 rounded-full hover:bg-green-600 transition duration-200">Play</button>
-					<script src="src/game/game.js"></script>
+					<script type="module" src="src/game/game.js"></script>
 				</div>
 				<button id="right-button-game" class="text-5xl text-white">&gt;</button>
 			</div>
