--- a/frontend/src/login/a2f.html
+++ b/frontend/src/login/a2f.html
@@ -14,6 +14,7 @@
 			<label for="code-input" class="block text-white font-semibold mb-1">Code</label>
 			<input id="code-input" type="text"  placeholder="enter code here" class="w-full p-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-[#00FFFF]"/>
 		</div>
+		<button type="button" id="to-send-a2f" class="w-full bg-[#00FFFF] text-black font-bold px-4 py-2 rounded-lg hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">M'envoyer le code</button>
 		<button type="submit" id="to-click-a2f" class="w-full bg-[#00FFFF] text-black font-bold px-4 py-2 rounded-lg hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Connexion</button>
 	</form>
 	<script type="module" src="a2f.js"></script>
