--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ft_transcendence</title>
 	<link rel="stylesheet" href="src/css/style.css">
-	<link rel="icon" type="image/png" href="src/images/logoallpage32.png"/>
+	<link rel="icon" type="image/png" href="src/images/iconpage.png"/>
 </head>
 
 <body id="body" class="bg-black bg-cover bg-center bg-no-repeat h-screen flex" style="background-image: url('/src/images/localgame.png'); background-size: 1920px 1080px;">
