chengement en fastify parce que elouann ne sait pas lire une consigne

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
 		<div id="chat-messages" class="flex-1 overflow-y-auto flex flex-col mb-4 space-y-2 whitespace-pre-wrap pb-2"></div>
 		<!-- Zone d'entrée + bouton -->
 		<div class="flex items-center gap-2 w-full">
-	 		<input id="chat-input" type="text" placeholder="Enter a message" class="p-2 border3 rounded-2xl flex-grow min-w-0 border-2 border-blue-200 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]" />
+	 		<input id="chat-input" type="text" placeholder="Enter a message" class="p-2 text-white rounded-2xl flex-grow min-w-0 border-2 border-blue-200 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]" />
 			<button id="chat-send" class="w-8 h-8 bg-gray-500 text-white rounded-full flex items-center justify-center shrink-0 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]">➤</button>
 		</div>
 		<script type="module" src="src/chat/chat.js"></script>
