--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
 
 	<div class="flex-1 flex flex-col">
 		<!-- TOP BAR -->
-		<div class="flex items-center justify-between border-b p-5">
+		<div class="flex items-center justify-between p-5">
 			<input type="search" placeholder="search" class="border-2 border-spacing-4 p-3 rounded-xl w-5/6 border-blue-300 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]"/>
 			<div id="topbar-buttons" class="flex items-center gap-6">
 				<!-- Bouton Notification avec tooltip -->
