configuration de vite complete, - .js des fichiers ts plus besoin de compiler juste lancer le docker, ajout du .env pour le frontend (rajouter son .env a la racine du frontend avec VITE_IP_NAME=votre_ip)

--- a/frontend/src/game/local/local.html
+++ b/frontend/src/game/local/local.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>local</title>
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../../css/style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
-	<link rel="icon" type="image/png" href="../images/logoallpage32.png"/>
+	<link rel="icon" type="image/png" href="/images/logoallpage32.png"/>
 
 
 	<style>
@@ -15,7 +15,7 @@
 </head>
 
 
-<body class="m-0 justify-center backdrop-blur items-center h-screenbg-cover bg-center bg-no-repeat h-screen flex" style="background-image: url('../images/pong.png'); background-size: 1920px 1080px;">
+<body class="m-0 justify-center backdrop-blur items-center h-screenbg-cover bg-center bg-no-repeat h-screen flex" style="background-image: url('/images/pong.png'); background-size: 1920px 1080px;">
 
 	<div class="flex justify-center items-center">
 		<!-- Joueur 1 -->
@@ -41,6 +41,7 @@
 		</div>
 	</div>
 
-	<script type="module" src="pong.js"></script>
+	<script type="module" src="local.ts"></script>
+
 </body>
 </html>
