--- a/frontend/src/game/tournaments/tournaments.html
+++ b/frontend/src/game/tournaments/tournaments.html
@@ -4,8 +4,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>test</title>
-		<link rel="stylesheet" href="style.css" />
-		<link rel="icon" type="image/png" href="../images/logoallpage32.png"/>
+		<link rel="stylesheet" href="../../css/style.css" />
+		<link rel="icon" type="image/png" href="/images/logoallpage32.png"/>
 
 	</head>
 <!---------------------------------------------------------------------->
