--- a/frontend/src/login/a2f.html
+++ b/frontend/src/login/a2f.html
@@ -5,11 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<title>a2f</title>
 	<link rel="stylesheet" href="../css/style.css">
-	<link rel="icon" type="image/png" href="../images/logoallpage32.png"/>
+	<link rel="icon" type="image/png" href="/images/logoallpage32.png"/>
 
 </head>
 
-<body class="bg-center bg-no-repeat min-h-screen flex items-center justify-center" style="background-image: url('../images/logincyberpunk.png')">
+<body class="bg-center bg-no-repeat min-h-screen flex items-center justify-center" style="background-image: url('/images/logincyberpunk.png')">
 	<form id="a2f" action="" method="POST" class="space-y-4 max-w-md w-full border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF] bg-white/5 backdrop-blur p-6 rounded-2xl">
 		<h2 class="text-center text-2xl text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF] mb-4">Authentification at double facteurs</h2>
 		<div id="code-div">
@@ -19,6 +19,6 @@
 		<button type="button" id="to-send-a2f" class="w-full bg-[#00FFFF] text-black font-bold px-4 py-2 rounded-lg hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">M'envoyer le code</button>
 		<button type="submit" id="to-click-a2f" class="w-full bg-[#00FFFF] text-black font-bold px-4 py-2 rounded-lg hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Connexion</button>
 	</form>
-	<script type="module" src="a2f.js"></script>
+	<script type="module" src="a2f.ts"></script>
 </body>
 </html>
