--- a/frontend/src/search/search.html
+++ b/frontend/src/search/search.html
@@ -5,10 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
  	<title>replace me</title>
 	<link rel="stylesheet" href="../css/style.css">
-	<link rel="icon" type="image/png" href="../images/logoallpage32.png"/>
+	<link rel="icon" type="image/png" href="/images/logoallpage32.png"/>
 </head>
 
-<body id="body" class="bg-black bg-cover bg-center bg-no-repeat h-screen flex" style="background-image: url('../images/statscyberpunk.png'); background-size: 1920px 1080px;">
+<body id="body" class="bg-black bg-cover bg-center bg-no-repeat h-screen flex" style="background-image: url('/images/statscyberpunk.png'); background-size: 1920px 1080px;">
 
 	<div class="w-1/4 min-w-[200px] rounded-2xl m-5 p-4 flex flex-col items-center border-4 border-blue-300 bg-white/5 backdrop-blur-lg shadow-[0_0_10px_#00FFFF]">
 		<div class="flex flex-col items-center gap-9 w-full">
@@ -50,8 +50,7 @@
 		</div>
 	</div>
 
-	<script src="../profile/redirectionbtn.js"></script>
-	<script type="module" src="../search/btn.js"></script>
+	<script type="module" src="search.ts"></script>
 
 </body>
 </html>
