tous les messages du site en anglais (sauf les erreurs car il vont possiblement disparaitre) chat box a droite si on ecrit, a gauche si un message d'une autre personne est envoyer

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,6 @@
 	 		<input id="chat-input" type="text" placeholder="Enter a message" class="p-2 text-white rounded-2xl flex-grow min-w-0 border-2 border-blue-200 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]" />
 			<button id="chat-send" class="w-8 h-8 bg-gray-500 text-white rounded-full flex items-center justify-center shrink-0 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]">➤</button>
 		</div>
-		<!-- <script type="module" src="src/chat/chat.js"></script> -->
 	</div>
 
 	<div class="flex-1 flex flex-col">
@@ -38,8 +37,7 @@
 				<!-- Bouton Profile avec tooltip -->
 				<div class="relative group">
 					<button id="profileBtn" type="button" class="w-14 h-14 bg-gray-200 rounded-full"></button>
-					<div class="absolute bottom-full mb-1 translate-y-2 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap">Profil</div>
-					<!-- <script src="src/profile/redirectionbtn.js"></script> -->
+					<div class="absolute bottom-full mb-1 translate-y-2 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap">Profile</div>
 				</div>
 		  	</div>
 		</div>
@@ -53,7 +51,6 @@
 					<div id="game-mode" class="text-white px-4 py-1.5 rounded text-3xl font-bold"></div>
 					<div id="description-game-mode" class="text-white px-4 py-10 rounded text-md font-bold"></div>
 					<button id="game-play-button" class="bg-green-500 text-white font-bold py-2 px-6 rounded-full hover:bg-green-600 transition duration-200">Play</button>
-					<!-- <script type="module" src="src/game/game.js"></script> -->
 				</div>
 				<button id="right-button-game" class="text-5xl text-white">&gt;</button>
 			</div>
