--- a/frontend/src/profile/profile.html
+++ b/frontend/src/profile/profile.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
- 	<title>Profil</title>
+ 	<title>Profile</title>
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="icon" type="image/png" href="/images/logoallpage32.png"/>
 
@@ -13,8 +13,8 @@
 	<div class="w-screen h-screen p-4">
 		<!-- Onglets -->
 		<div class="flex justify-center gap-4 mt-3 mb-6">
-			<button id="stats-btn" class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF] text-black hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Statistiques</button>
-			<button id="edit-btn" class="tab-button px-10 py-3 rounded-xl font-semibold bg-gray-200 text-gray-700 hover:bg-gray-300 transition">Modifier le profil</button>
+			<button id="stats-btn" class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF] text-black hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Statistics</button>
+			<button id="edit-btn" class="tab-button px-10 py-3 rounded-xl font-semibold bg-gray-200 text-gray-700 hover:bg-gray-300 transition">Edit profile</button>
 		</div>
 			
 		<!-- Formulaire d'édition -->
@@ -40,13 +40,13 @@
 					</div>
 					
 					<div class="flex items-center md:w-2/3">
-						<button id="edit-password-btn" type="button" class="px-6 py-3 bg-gray-500 text-white rounded-xl hover:bg-gray-700 transition">Change Password</button>
+						<button id="edit-password-btn" type="button" class="px-6 py-3 bg-gray-500 text-white rounded-xl hover:bg-gray-700 transition">Edit Password</button>
 					</div>
 	
 					<!-- Boutons -->
 					<div class="flex justify-start gap-6 pt-8">
-						<button type="button" id="unsave-btn" class="px-6 py-3 bg-red-500 text-white rounded-xl hover:bg-red-600 transition">Annuler</button>
-						<button type="submit" id="save-btn" class="px-6 py-3 bg-green-500 text-white rounded-xl hover:bg-green-600 transition">Sauvegarder</button>
+						<button type="button" id="unsave-btn" class="px-6 py-3 bg-red-500 text-white rounded-xl hover:bg-red-600 transition">Unsave</button>
+						<button type="submit" id="save-btn" class="px-6 py-3 bg-green-500 text-white rounded-xl hover:bg-green-600 transition">Save</button>
 					</div>      
 				</div>
 	
@@ -105,8 +105,8 @@
 
 					<!-- Boutons -->
 					<div class="flex justify-start gap-6 pt-8">
-						<button type="button" id="unsave-btn-edit-password" class="px-6 py-3 bg-red-500 text-white rounded-xl hover:bg-red-600 transition">Annuler</button>
-						<button type="submit" id="save-btn-edit-password" class="px-6 py-3 bg-green-500 text-white rounded-xl hover:bg-green-600 transition">Sauvegarder</button>
+						<button type="button" id="unsave-btn-edit-password" class="px-6 py-3 bg-red-500 text-white rounded-xl hover:bg-red-600 transition">Unsave</button>
+						<button type="submit" id="save-btn-edit-password" class="px-6 py-3 bg-green-500 text-white rounded-xl hover:bg-green-600 transition">Save</button>
 					</div>      
 				</div>
 			</div>
@@ -116,7 +116,7 @@
   
 			<div class="flex justify-center gap-4 mb-4 relative z-10">
     			<button id="History-btn" type="button" class="tab-button px-10 py-2 rounded-xl font-semibold bg-gray-200  text-gray-700 hover:bg-gray-300 transition ">History</button>
-    			<button id="Global-btn" type="button" class="tab-button px-10 py-2 rounded-xl font-semibold bg-[#00FFFF] text-black  hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Global</button>
+    			<button id="Global-btn" type="button" class="tab-button px-10 py-2 rounded-xl font-semibold bg-[#00FFFF] text-black  hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Overall</button>
     			<button id="Tournament-btn" type="button" class="tab-button px-10 py-2 rounded-xl font-semibold bg-gray-200 text-gray-700 hover:bg-gray-300 transition">Tournament</button>
   			</div>
 
@@ -140,12 +140,6 @@
 	
 
 	<script type="module" src="profile.ts"></script>
-<!-- 	
-	<script type="module" src="profile.js"></script>
-	<script type="module" src="stats.js"></script>
-	<script type="module" src="history.js"></script> -->
-	<!-- <script type="module" src="global.js"></script> -->
-
 	
 </body>
 </html>
