page de profile mise en SPA, tous fonctionne

--- a/frontend/src/game/ai/ai.html
+++ b/frontend/src/game/ai/ai.html
@@ -37,7 +37,7 @@
 
 		<!-- Joueur 2 -->
 		<div class="ml-12 flex flex-col items-center">
-			<h1 class="text-center text-[50px] text-[#FF007A] font-bold drop-shadow-[0_0_10px_#FF007A]">Player 2</h1>
+			<h1 class="text-center text-[50px] text-[#FF007A] font-bold drop-shadow-[0_0_10px_#FF007A]">Ai</h1>
 			<canvas id="statPlayer2" width="250" height="600" class="mt-2 border-4 bg-black border-[#FF007A] shadow-[0_0_10px_#FF007A] rounded-[10px]"></canvas>
 		</div>
 	</div>
