--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -23,7 +23,7 @@
 			</div>
 			<!-- Bouton Profile avec tooltip -->
 			<div class="relative group">
-				<button id="profileBtn" type="button" class="w-14 h-14 bg-gray-200 rounded-full"></button>
+				<a href="/profile/statistics" data-link id="profileBtn" type="button" class="w-14 h-14 bg-gray-200 rounded-full"></a>
 				<div class="absolute bottom-full mb-1 translate-y-2 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap">Profile</div>
 			</div>
 		  </div>
