search marche parfaitement bouton home marche profil aussi, bouton history et overall aussi donc je pense la conversion en SPA est fini !!!!

--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -12,13 +12,13 @@
 <div class="flex-1 flex flex-col">
 	<!-- TOP BAR -->
 	<div class="flex items-center justify-between p-5">
-		<input id="search-bar" type="search" placeholder="search" class="border-2 border-spacing-4 p-3 rounded-xl w-5/6 border-blue-300 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]"/>
+		<input id="search-bar" type="search" placeholder="search" class="border-2 text-white border-spacing-4 p-3 rounded-xl w-5/6 border-blue-300 bg-white/5 backdrop-blur-lg  shadow-[0_0_10px_#00FFFF]"/>
 		<div id="topbar-buttons" class="flex items-center gap-6">
 			<!-- Bouton home avec tooltip -->
 			<div class="relative group">
-				<button id="home" class="w-10 h-10 bg-transparent flex items-center justify-center rounded-full"><svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-700" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+				<a href="/home" data-link id="home" class="w-10 h-10 bg-transparent flex items-center justify-center rounded-full"><svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-700" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" /></svg>
-				</button>
+				</a>
 				<div class="absolute bottom-full mb-1 translate-y-2 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition pointer-events-none whitespace-nowrap">Home</div>
 			</div>
 			<!-- Bouton Profile avec tooltip -->
