--- a/frontend/src/pages/search_history.html
+++ b/frontend/src/pages/search_history.html
@@ -29,12 +29,12 @@
 
 	<div class="h-full rounded-2xl m-3 p-2 flex flex-col border-4 border-blue-300 bg-white/5 backdrop-blur-lg shadow-[0_0_10px_#00FFFF]">
 		<div class="flex justify-center gap-4 mt-2 mb-6">
-			<a data-link id="global-btn-search" class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF] text-black hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">Overall</a>
-			<a data-link id="history-btn-search" class="tab-button px-10 py-3 rounded-xl font-semibold bg-gray-200 text-gray-700 hover:bg-gray-300 transition">History</a>
+			<a data-link id="global-btn-search" class="tab-button px-10 py-3 rounded-xl font-semibold bg-gray-200 text-gray-700 hover:bg-gray-300 transition">Overall</a>
+			<a data-link id="history-btn-search" class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF] text-black hover:brightness-125 transition shadow-[0_0_10px_#00FFFF]">History</a>
 		</div>
 
 		<div class="flex-1 relative flex items-center justify-center">
-			<div id="global-div-search" class="bg-black w-full h-full "></div>
+			<div id="history-div-search" class=" w-11/12 h-[75vh] space-y-6 overflow-y-auto bg-white/5 backdrop-blur p-6 rounded-2xl shadow-[0_0_20px_rgba(0,0,0,1),0_0_40px_rgba(0,0,0,0.9),0_0_60px_rgba(0,0,0,0.8)] mx-auto"></div>
 		</div>
 	</div>
 </div>
